--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   be:
-    image: phongtranww/ou_page_be:v2
+    image: phongtranww/ou_page_be:v3-beta
     container_name: ou_page_be
     ports:
       - "3000:3000"
@@ -19,8 +19,8 @@ services:
       - S3_ENDPOINT=http://minio:9000
       - S3_FORCE_PATH_STYLE=true
       - S3_BUCKET=ou-page
-      - API_KEY=YXBpX2tleV9ndWFyZF9kYXk=
-      - FE_HOST= # your fe host (example: http://localhost:5173)
+      - JWT_SECRET=YXBpX2tleV9ndWFyZF9kYXk=
+      - FE_HOST=*
     restart: "no"
     depends_on:
       - postgres
